--- a/index - Copy.html
+++ b/index - Copy.html
@@ -732,8 +732,11 @@ Conducting technical research and development to enable  contionius innovation w
 										<i class="fa fa-bolt color"></i>
 										<span>SKILLS</span>
 									</div>
-									<div class="skill_items charts">
-									            <div class="col-md-12">
+									
+								    <div class="row">
+									    <div class="col-md-3 col-sm-4 col-xs-6">
+										    <div class="skill_items charts">
+											    <div class="col-md-12">
 		                                            <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="90">
 		                                                    <div class="num">90</div>
@@ -741,33 +744,48 @@ Conducting technical research and development to enable  contionius innovation w
 		                                                <div class="name">Web Administration</div>
 		                                            </div>
 		                                        </div>
-		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft">
+											</div>	
+										</div>		
+		                                <div class="col-md-3 col-sm-4 col-xs-6">
+										    <div class="skill_items charts">
+											    <div class="col-md-12">
+										            <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="80">
 		                                                    <div class="num">80</div>
 		                                                </div>
 		                                                <div class="name">Configuration Management</div>
 		                                            </div>
 		                                        </div>
+											</div>	
+										</div>
+										<div class="col-md-3 col-sm-4 col-xs-6">
+		                                    <div class="skill_items charts">
 		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft">
+   											        <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="75">
 		                                                    <div class="num">75</div>
 		                                                </div>
 		                                                <div class="name">CI-CD</div>
 		                                            </div>
 		                                        </div>
+											</div>	
+										</div>		
+		                                <div class="col-md-3 col-sm-4 col-xs-6">
+										    <div class="skill_items charts">
 		                                        <div class="col-md-12">
-		                                            <div class="item anim_element" data-animation="fadeInLeft">
+ 											        <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="75">
 		                                                    <div class="num">75</div>
 		                                                </div>
 		                                                <div class="name">Monitoring</div>
 		                                            </div>
 		                                        </div>
+											</div>	
+										</div>	
 									</div>
 									<div class="skill_items charts" style="margin-top:35px">
-		                                        <div class="col-md-12">
+									    <div class="row">
+		                                        <div class="col-md-3 col-sm-4 col-xs-6">
 		                                            <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="75">
 		                                                    <div class="num">75</div>
@@ -775,7 +793,7 @@ Conducting technical research and development to enable  contionius innovation w
 		                                                <div class="name">Analytics</div>
 		                                            </div>
 		                                        </div>
-												<div class="col-md-12">
+												<div class="col-md-3 col-sm-4 col-xs-6">
 		                                            <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="80">
 		                                                    <div class="num">80</div>
@@ -783,7 +801,7 @@ Conducting technical research and development to enable  contionius innovation w
 		                                                <div class="name">AWS</div>
 		                                            </div>
 		                                        </div>
-												<div class="col-md-12">
+												<div class="col-md-3 col-sm-4 col-xs-6">
 		                                            <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="50">
 		                                                    <div class="num">50</div>
@@ -791,7 +809,7 @@ Conducting technical research and development to enable  contionius innovation w
 		                                                <div class="name">Azure</div>
 		                                            </div>
 		                                        </div>
-		                                        <div class="col-md-12">
+		                                        <div class="col-md-3 col-sm-4 col-xs-6">
 		                                            <div class="item anim_element" data-animation="fadeInLeft">
 		                                                <div class="num_chart" data-bar-color="#4e989f" data-bar-width="130" data-percent="80">
 		                                                    <div class="num">80</div>
@@ -799,6 +817,7 @@ Conducting technical research and development to enable  contionius innovation w
 		                                                <div class="name">Scripting</div>
 		                                            </div>
 		                                        </div>
+										</div>		
 									</div>
 									
 										<!-- /Skills Item -->
