--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 									style="
 									top:29%;
 									left:50%;
-									width:133px;
-									height:133px;
+									width:200px;
+									height:200px;
 									border-radius:100%;
 									z-index:3000;
 									"
@@ -172,11 +172,11 @@
 	                                <p class="ls-l"
 
 	                                	style="
-	                                	top: 53%;
+	                                	top: 63%;
 	                                	left: 50%;
 	                                	font-family:'Raleway', sans-serif;
 	                                	font-size:60px;
-	                                	font-weight:100;
+	                                	font-weight:85;
 	                                	color:#ffffff;
 	                                	white-space: nowrap;
 	                                	z-index:3000;"
@@ -187,13 +187,13 @@
 	                                	offsetyout:top;
 	                                	delayin:150;
 	                                	">
-	                                    Ashish Mhatre
+	                                    <b>Ashish Mhatre</b>
 	                                </p>
 
 	                                <p class="ls-l"
 
 	                                	style="
-	                                	top: 63%;
+	                                	top: 73%;
 	                                	left: 50%;
 	                                	font-size:15px;
 	                                	font-style:italic;
@@ -823,52 +823,58 @@ Conducting technical research and development to enable  contionius innovation w
 						<div class="container">
 							<div class="row">
 								<div class="title parallax_title2 col-md-12"><span style="color:black">MY TOOLBOX</span></div>
-								<div class="client_items col-md-12">							
+								<!-- <div class="client_items col-md-12"> -->
+                                <div class="row col-md-12">															
 									<!-- <div align="center" class="item anim_element" data-animation="flipInY"> -->
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/aws.png" alt="img" width="200" height="80" /></a>
 									</div>
-									<div align="center" >								
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">								
 									<a href="#"><img align="middle" src="img/azure.png" alt="img" width="175" height="80" /></a>
 									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 									<a href="#"><img align="middle" src="img/chef.png" alt="img" width="90" height="80" /></a>
 									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/puppet.png" alt="img" width="90" height="80" /></a>
 									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:50px">
 										<a href="#"><img align="middle" src="img/docker.png" alt="img" width="150" height="100" /></a>
 									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:60px">
+									<a href="#"><img align="middle" src="img/terraform.png" alt="img" width="110" height="90" /></a>
+									</div>
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/icinga.png" alt="img"  width="175" height="80" /></a>
 									</div>	
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/new-relic.png" alt="img" width="100" height="80" /></a>
 									</div>	
-									<!--
-									<div align="center" >
-										<a href="#"><img align="middle" src="img/nexus.png" alt="img" width="200" height="100" /></a>
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
+										<a href="#"><img align="middle" src="img/nexus.png" alt="img" width="200" height="65" /></a>
 									</div>
-									-->
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/elastic.png" alt="img" width="200" height="70" /></a>										
 									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/tomcat.png" alt="img" width="160" height="80" /></a>										
 									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/apache.png" alt="img" width="175" height="80" /></a>										
 									</div>
-									<div align="center" >
-										<a href="#"><img align="middle" src="img/NGINX.png" alt="img" width="175" height="70" /></a>										
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
+										<a href="#"><img align="middle" src="img/NGINX.png" alt="img" width="175" height="65" /></a>										
+									</div>	
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
+										<a href="#"><img align="middle" src="img/rabbitMQ.png" alt="img" width="200" height="68" /></a>										
 									</div>
-									<div align="center" >
-										<a href="#"><img align="middle" src="img/rabbitMQ.png" alt="img" width="175" height="70" /></a>										
-									</div>
-									<div align="center" >
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
 										<a href="#"><img align="middle" src="img/gitlab.png" alt="img" width="175" height="80" /></a>										
 									</div>
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:60px">
+										<a href="#"><img align="middle" src="img/jenkins.png" alt="img" width="165" height="100" /></a>										
+									</div>	
+								</div>
 								</div>
 							</div>
 						</div>
@@ -902,7 +908,7 @@ Conducting technical research and development to enable  contionius innovation w
 								                                            </div>
 								                                            <div class="description">
 																			<p align="justify">
-																			&bull; AWS Certified Solutions Architect – Associate (Nov 2017 – Nov 2019)</br>
+																			&bull; AWS Certified Solutions Architect – Associate</br>
                                                                             &bull; Professional Scrum Master – I (Scrum.org)</br>
 																			&bull; AWS Certified Developer (in-progress)</br>
 																			&bull; SixSigma - Green Belt
@@ -926,8 +932,8 @@ Conducting technical research and development to enable  contionius innovation w
 																			&bull; Devops Implementation Boot Camp (Conducted)</br>
                                                                             &bull; Cloud Computing and Basic Awareness (Conducted)</br>
 																			&bull; Agile : Concepts and Awareness (Attended)</br>
-																			&bull; Microsoft Azure - Infrastructure Solutions  (Attended)</br>		
-																			&bull; ITIL Foundation - Certificate in IT Service Management (Attended)</br>
+																			&bull; Microsoft Azure - Infrastructure Solutions  (Attended)</br>
+																			&bull; ITIL Foundation - IT Service Management (Attended)
 																				</p>
 								                                            </div>
 								                                        </div>
@@ -979,7 +985,7 @@ Conducting technical research and development to enable  contionius innovation w
 									<div class="item col-md-12">
 										<div class="media">
 											<a class="pull-left imagediv" href="#">
-												<img class="image" src="img/AshishM.jpg" alt="img" />
+												<img class="image" src="img/Imtiaz.jpeg" alt="img" />
 											</a>
 											<div class="media-body">
 												<div class="main">
