--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 									class="ls-l"
 									
 									style="
-									top:29%;
+									top:40%;
 									left:50%;
 									width:200px;
 									height:200px;
@@ -172,7 +172,7 @@
 	                                <p class="ls-l"
 
 	                                	style="
-	                                	top: 63%;
+	                                	top: 73%;
 	                                	left: 50%;
 	                                	font-family:'Raleway', sans-serif;
 	                                	font-size:60px;
@@ -193,7 +193,7 @@
 	                                <p class="ls-l"
 
 	                                	style="
-	                                	top: 73%;
+	                                	top: 84%;
 	                                	left: 50%;
 	                                	font-size:15px;
 	                                	font-style:italic;
@@ -827,52 +827,52 @@ Conducting technical research and development to enable  contionius innovation w
                                 <div class="row col-md-12">															
 									<!-- <div align="center" class="item anim_element" data-animation="flipInY"> -->
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/aws.png" alt="img" width="200" height="80" /></a>
+										<img align="middle" src="img/aws.png" alt="img" width="200" height="80" /></a>
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">								
-									<a href="#"><img align="middle" src="img/azure.png" alt="img" width="175" height="80" /></a>
+									    <img align="middle" src="img/azure.png" alt="img" width="175" height="80" /></a>
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-									<a href="#"><img align="middle" src="img/chef.png" alt="img" width="90" height="80" /></a>
+									    <img align="middle" src="img/chef.png" alt="img" width="90" height="80" /></a>
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/puppet.png" alt="img" width="90" height="80" /></a>
-									</div>
-									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:50px">
-										<a href="#"><img align="middle" src="img/docker.png" alt="img" width="150" height="100" /></a>
+										<img align="middle" src="img/puppet.png" alt="img" width="90" height="80" /></a>
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:50px">
-									<a href="#"><img align="middle" src="img/terraform.png" alt="img" width="200" height="100" /></a>
+										<img align="middle" src="img/docker.png" alt="img" width="150" height="100" /></a>
+									</div>
+									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:50px">
+									    <img align="middle" src="img/terraform.png" alt="img" width="200" height="100" /></a>
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/icinga.png" alt="img"  width="175" height="80" /></a>
+										<img align="middle" src="img/icinga.png" alt="img"  width="175" height="80" /></a>
 									</div>	
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/new-relic.png" alt="img" width="100" height="80" /></a>
+										<img align="middle" src="img/new-relic.png" alt="img" width="100" height="80" /></a>
 									</div>	
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/nexus.png" alt="img" width="160" height="80" /></a>
+										<img align="middle" src="img/nexus.png" alt="img" width="160" height="80" /></a>
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/elastic.png" alt="img" width="210" height="80" /></a>										
+										<img align="middle" src="img/elastic.png" alt="img" width="210" height="80" /></a>										
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/tomcat.png" alt="img" width="160" height="80" /></a>										
+										<img align="middle" src="img/tomcat.png" alt="img" width="160" height="80" /></a>										
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/apache.png" alt="img" width="175" height="80" /></a>										
+										<img align="middle" src="img/apache.png" alt="img" width="175" height="80" /></a>										
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/NGINX.png" alt="img" width="175" height="80" /></a>										
+										<img align="middle" src="img/NGINX.png" alt="img" width="175" height="80" /></a>										
 									</div>	
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/rabbitMQ.png" alt="img" width="180" height="80" /></a>										
+										<img align="middle" src="img/rabbitMQ.png" alt="img" width="180" height="80" /></a>										
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:70px">
-										<a href="#"><img align="middle" src="img/gitlab.png" alt="img" width="175" height="80" /></a>										
+										<img align="middle" src="img/gitlab.png" alt="img" width="175" height="80" /></a>										
 									</div>
 									<div align="center" class="col-md-3 col-sm-4 col-xs-6" style="padding-bottom:40px">
-										<a href="#"><img align="middle" src="img/jenkins.png" alt="img" width="90" height="120" /></a>										
+										<img align="middle" src="img/jenkins.png" alt="img" width="60" height="80" /></a>										
 									</div>	
 								</div>
 								</div>
@@ -990,7 +990,7 @@ Conducting technical research and development to enable  contionius innovation w
 											<div class="media-body">
 												<div class="main">
 													<i class="fa fa-quote-left icon"></i>
-													<span class="text">
+													<span class="text" align="justify">
 														As Ashish's colleague and then subsequent manager, I’ve worked closely with him over the past several years. All along our tenure, Ashish showed excellent communication skills and consistently exceeded expectations. Core qualities included a tenacious approach to problem solving and an inherent understanding of technology.
 Primarily a DevOps engineer, Ashish also functioned as an infrastructure architect with the development teams and performed superlatively on account of his skill to articulate requirements in to engineering designs. As part of a deserving career growth initiative, I also empowered Ashish with managing a part of my team and within a very short time he emerged a leader and mentor for his direct reports. Besides managing deliverables, Ashish also focused, nourished and created growth opportunities for his team.
 I’d like to restate my strong support for Ashish, and confident that he will surpass any expectations in any role
