changes to mysite

--- a/index.html
+++ b/index.html
@@ -336,14 +336,14 @@
 														<div class="col-md-12 promo-entry">													
 															<h2 class="demo1"  align="center">Hello. I am <b><span class="rotate">a Cloud Architect.,a Sysadmin.,a DevOps Engineer.</span></b>
 															</h2>
-															<h2>I love making stuff that are highly available and designed for failure.</br> I am passionate about technology!</h2>
+															<h2>I love making stuff that are highly available and designed to survive potential risks and disasters.</br> I am passionate about technology!</h2>
 															<!--
 															<h2 align="center">I love making stuff that are highly available and designed for failure.</h2>
                                                             <h2 align="center"> I am passionate about technology!</h2>
 															-->
 															<!-- CV Download Button -->
 															<div class="about_user_download_cv col-md-12">
-																<a href="./img/ASHISH_MHATRE_CV.pdf" target="_blank" class="btn large iconbtn"><i class="fa fa-download"></i><span>DOWNLOAD RESUME</span></a>
+																<a href="./img/Ashish_Mhatre-RESUME-2020.pdf" target="_blank" class="btn large iconbtn"><i class="fa fa-download"></i><span>DOWNLOAD RESUME</span></a>
 																
 																<!-- <a href="/img/ASHISH MHATRE RESUME.pdf" download="newname" target="_blank" class="et_pb_button" >DOWNLOAD CV</a> -->
 															</div>
@@ -538,7 +538,7 @@ Conducting technical research and development to enable  contionius innovation w
 									</div>
 									<div class="item col-md-4 col-sm-4 anim_element" data-animation="flipInY" data-animation-delay="200">
 										<i class="fa fa-laptop color"></i>
-										<div class="num">9</div>
+										<div class="num">11</div>
 										<div class="text">YEARS OF IT EXPERIENCE</div>
 									</div>
 									<div class="item col-md-4 col-sm-4 anim_element" data-animation="flipInY" data-animation-delay="300">
